매니페스트 변경 실습   - 앱 아이콘 변경   - 앱 이름 변경   - 테마 색상   - 테마 타이틀바

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">20191031_01_AndroidFunctions</string>
+    <string name="my_app_name">김기백의앱</string>
 </resources>
